--- a/index.html
+++ b/index.html
@@ -58,16 +58,23 @@ document.addEventListener('DOMContentLoaded', function() {
   var calendar = new FullCalendar.Calendar(calendarEl, {
 
     initialView: 'timeGridWeek',
-    firstDay: 0, // Sunday start
-    initialDate: '2026-02-22', // Sunday Feb 22
+    firstDay: 0,
+    initialDate: '2026-02-22',
     slotMinTime: "06:00:00",
     slotMaxTime: "23:59:00",
     slotDuration: "00:30:00",
-    selectable: true,
-    editable: true,
-    nowIndicator: false,
     allDaySlot: false,
     height: "auto",
+
+    selectable: true,
+    editable: true,
+    selectMirror: true,
+
+    // 👇 Mobile improvements
+    longPressDelay: 300,
+    selectLongPressDelay: 300,
+    eventLongPressDelay: 300,
+    dragScroll: true,
 
     headerToolbar: {
       left: '',
@@ -116,6 +123,5 @@ document.addEventListener('DOMContentLoaded', function() {
   calendar.render();
 });
 </script>
-
 </body>
 </html>
