--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <title>Weekly Time Blocking</title>
 
 <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.11/index.global.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.11/index.global.min.js"></script>
 
 <style>
+  html, body {
+  overscroll-behavior: contain;
+  touch-action: manipulation;
+}
 body {
   font-family: Arial, sans-serif;
   margin: 20px;
@@ -70,11 +75,13 @@ document.addEventListener('DOMContentLoaded', function() {
     editable: true,
     selectMirror: true,
 
-    // 👇 Mobile improvements
     longPressDelay: 300,
     selectLongPressDelay: 300,
     eventLongPressDelay: 300,
+    eventDragMinDistance: 5,
+    selectMinDistance: 5,
     dragScroll: true,
+   
 
     headerToolbar: {
       left: '',
