--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@ h2 {
 
 <div class="instructions">
 <strong>You must use your current schedule & involvements and then incorporate the following:</strong><br><br>
-Reports due this Friday AND you still need to schedule meetings with your mentees; 
+Reports due this Friday AND you still need to schedule individual meetings with your mentees; 
 2 exams — one Wednesday night, one Friday morning; 
-Invited to friend's birthday party on Friday night; 
-4 hours of Homework due Saturday night; 
+Invited to friend's birthday party on Friday night at 8:20 PM with sign reveal at 9:30 PM; 
+6 hours of Homework due Saturday night; 
 Situationship wants to meet up.
 </div>
   
