--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ h2 {
 <div class="instructions">
 <strong>You must use your current schedule & involvements and then incorporate the following:</strong><br><br>
 Reports due this Friday AND you still need to schedule individual meetings with your mentees; 
-2 exams — one Wednesday night, one Friday morning; 
+2 exams — one Wednesday night, one Friday morning (you ideally need to study for 10 hours); 
 Invited to friend's birthday party on Friday night at 8:20 PM with sign reveal at 9:30 PM; 
 6 hours of Homework due Saturday night; 
 Situationship wants to meet up.
@@ -62,7 +62,7 @@ Situationship wants to meet up.
     background:#2d6cdf;
     color:white;
     cursor:pointer;">
-    + Add University Class
+    + Add Class
   </button>
 </div>
   
@@ -160,8 +160,8 @@ select: function(info) {
   start: info.start,
   end: info.end,
   allDay: false,
-  backgroundColor: '#c6f5c6',
-  borderColor: '#c6f5c6'
+  backgroundColor: '#8ECAE6',
+  borderColor: '#8ECAE6'
 });
 
 checkCompletion(); // 👈 add this line
@@ -266,8 +266,8 @@ window.submitClass = function() {
   title: name,
   start: dateStr + "T" + startTime,
   end: dateStr + "T" + endTime,
-  backgroundColor: '#b3d9ff',
-  borderColor: '#b3d9ff'
+  backgroundColor: '#A7C957',
+  borderColor: '#A7C957'
 });
 
   });
